2006-01-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/Makefile.am:
	* flumotion/common/messages.py:
	  add a Message serializable class, extracted from wizard.message
	* flumotion/test/Makefile.am:
	* flumotion/test/test_common_messages.py:
	  and a simple test for it
	* data/glade/wizard.glade:
	* flumotion/wizard/message.py:
	* flumotion/wizard/wizard.py:
	  use the new Message class
	  rename MessageView to MessagesView, it shows more than one

2006-01-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  don't debug tracebacks from pb.Error, since they specifically
	  get handled on the other side of a pb connection

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/common/medium.py:
	* flumotion/worker/worker.py:
	  rename run_bundled_proc to runFunction and move it to the
	  worker's medium, since we only ever want workers to do this for us.

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  make wrapper functions to read an int and a string, so that
	  we get a ConfigError if the values in the config are empty
	* flumotion/manager/main.py:
	  if there is a config error, print a nice warning instead of
	  a traceback

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/managers/default/planet.xml:
	* flumotion.spec.in:
	* flumotion/common/config.py:
	* flumotion/manager/main.py:
	  add a <certificate> option to the <manager> section in config
	  file formats, and document it in sample config and spec file
	  Closes #246

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/main.py:
	  on a config parsing error after daemonizing, only log the error
	  and SystemError, but not exit.  Fixes #310

2006-01-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/main.py: