@@ -5,7 +5,6 @@ flumotiondir = $(libdir)/flumotion/python/flumotion/wizard
 flumotion_PYTHON = \
 	__init__.py \
 	enums.py \
-	message.py \
 	save.py \
 	sidebar.py \
 	step.py \
